23May99=======================================================================
1. Got rid of some of the useless error messages on global destruction when
quiting a program.
2. Stuck -w back on client.pl
23May99=======================================================================
1. tried to change connection to raw mode for cluster connections
2. sh/c and sh/u are now sorted in alphabetical order
3. Limited the number of queued dx spots when composing messages to 20 (the 
oldest one is lost for every one added above 20).
4. Added generalised shell globbing everywhere I think it is useful, including
sh/dx, dir, sh/files etc
5. Made dir more compatible with ak1a and added 'to' and 'from' call searching
it should now do everything that ak1a does except counts.
6. added similar functionality to kill command so that you can kill ranges, to
and from callsigns etc.
22May99=======================================================================
1. added check for -1 from Date::Parse and return undef for out of range dates
2. added show/files and type commands
21May99=======================================================================
1. made set/nodx work again.
2. made dx stuff queue nicely again when sending messages.
18May99=======================================================================
1. Added announce dup checking.
2. Added system announce filtering.
08May99=======================================================================
1. Added a bit more checking to the rcmd thing to make more sure that this
rcmd isn't coming from an imposter. Not possible to prevent everything 
ofcourse, just make it a bit harder.
2. altered set/lockout and set/privilege so that they can't executed remotely.
3. Added some code to reject rubbish (with invalid binary characters) protocol
or user lines as input.
4. prevented PC command being executed remotely :-)
05May99=======================================================================